# virtual-surgery-simulation

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  README.md  debug_test.py  debug_test2.py  design - 副本.txt  design.md  test_compiler.cpp  test_comprehensive.py  test_improved.py  test_md.md  test_md_improved.md  test_simple.cpp  test_simulation.py
config/: default_params.json  haptic_settings.json  tissue_materials.json
include/collision/: aabb_tree.h  gjk_algorithm.h
include/core/: math_utils.h  types.h
include/haptic/: adaptive_filter.h  delay_compensator.h  force_mapper.h  haptic_device.h
include/io/: mesh_loader.h
include/physics/: constraint_projector.h  contact.h  fem_solver.h  instrument.h  rigid_body_solver.h  suture.h  tissue.h  xpbd_solver.h
include/rendering/: renderer.h
spec/: checklist.md  spec.md  task_list.md
src/: main.cpp
src/collision/: aabb_tree.cpp
src/core/: math_utils.cpp
test_output/: test_results.json
test_output_improved/: test_results.json  test_results_20260216_205451.csv  test_results_20260216_205451.json  test_results_20260216_205714.csv  test_results_20260216_205714.json  test_results_20260216_205928.csv  test_results_20260216_205928.json  test_results_20260216_210113.csv  test_results_20260216_210113.json  test_results_20260216_210139.csv  test_results_20260216_210139.json  test_results_20260216_210200.csv  test_results_20260216_210200.json  test_results_20260216_210226.csv  test_results_20260216_210226.json
visualization/: README.md  surgery_simulation.html  surgery_visualizer.py  test_visualization.py
(+12 files in other folders)
